documentacao e integracao de comandos!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=projeto-cyberseguranca-bot-java
 spring.docker.compose.enabled=false
+
+# ID do dono do bot (honeypot /admin_panel e comandos admin). Defina no .env ou aqui.
+# discord.owner.id=SEU_ID_AQUI
+
+# Caminho opcional do arquivo de vulnerabilidades (padrão: data/vulnerabilidades.json)
+# vulnerability.file.path=
